--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.4",
   "type": "module",
+  "author": "Kishan Rameshchandra Thobhani",
   "scripts": {
     "web:dev:local": "vite --config vite.config.raw.ts --host --port 8100",
 
